--- a/SoteriaGame/Assembly-CSharp.csproj
+++ b/SoteriaGame/Assembly-CSharp.csproj
@@ -46,6 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\BasicAggro.cs" />
+     <Compile Include="Assets\BasicEnemyController.cs" />
      <Compile Include="Assets\Movement.cs" />
      <Compile Include="Assets\PlayerController.cs" />
  <Reference Include="UnityEngine.UI">
