--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ Art/Concept Art/Environment/Iconr
 Art/Concept Art/shadow creatures/Iconr
 Art/reference art/Iconr
 Art/reference art/City references /Iconr
+Art/Asset_Library/Iconr
+Art/Asset_Library/Soteria_Statue/Iconr
+Art/character_turnaround_sheets/Iconr
