--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@ Art/reference art/City references /Iconr
 Art/Asset_Library/Iconr
 Art/Asset_Library/Soteria_Statue/Iconr
 Art/character_turnaround_sheets/Iconr
+Art/Concept_Art/Iconr
+Art/Concept_Art/character_concepts/Iconr
+Art/Concept_Art/character_concepts/main character/Iconr
+Art/Concept_Art/character_concepts/secondary characters/Iconr
+Art/Concept_Art/character_concepts/Soteria/Iconr
+Art/Concept_Art/Environment/Iconr
+Art/Concept_Art/shadow_creatures/Iconr
+Art/reference_art/Iconr
+Art/reference_art/City references /Iconr
+TechArt/ExternalTools/.coverage
