File rename script 0.0.1 TechArt Documentation

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ Art/Concept_Art/shadow_creatures/Iconr
 Art/reference_art/Iconr
 Art/reference_art/City references /Iconr
 TechArt/ExternalTools/.coverage
+conf.py
+Art/reference_art/City_References/Iconr
+Iconr
+TechArt/doc/make.bat
+TechArt/doc/Makefile
