Demo Scene with 3D Assets
Demo Scene where I basically build a level in unity using 3D assets.
Next I'll make another scene with 2D sprites

--- a/SoteriaGame/Assembly-CSharp-vs.csproj
+++ b/SoteriaGame/Assembly-CSharp-vs.csproj
@@ -52,6 +52,8 @@
      <Compile Include="Assets\Scripts\CameraFollow.cs" />
      <Compile Include="Assets\Scripts\CollisionEvent.cs" />
      <Compile Include="Assets\Scripts\Controllers\BasicEnemyController.cs" />
+     <Compile Include="Assets\Scripts\Controllers\ButtonController.cs" />
+     <Compile Include="Assets\Scripts\Controllers\ButtonMode.cs" />
      <Compile Include="Assets\Scripts\Controllers\Clickable.cs" />
      <Compile Include="Assets\Scripts\Controllers\EncounterMovementController.cs" />
      <Compile Include="Assets\Scripts\Controllers\FearResidueController.cs" />
